metadata/force-app/main/default/objects/CustomName_hJNjQ__c/CustomName_hJNjQ__c.object-meta.xml
<CustomObject>
    <description>Description_hHvyY</description>
    <label>CustomLabel_wHLyL</label>
    <nameField>
        <label>CustomLabel_wHLyL</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_wHLyLs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>