metadata/force-app/main/default/objects/CustomName_hJNjQ__c/fields/CustomField_kXoWU__c.field-meta.xml
<CustomField>
    <fullName>CustomField_kXoWU__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldleUJK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>